k8s/apps/outline-wiki/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
spec:
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
        - name: outline
          image: outlinewiki/outline:0.72.2
          ports:
            - containerPort: 3000
              protocol: TCP
