k8s/apps/outline-wiki/base/statefulset-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: outline-wiki-postgresql
spec:
  serviceName: "outline-wiki-postgresql"
  replicas: 1  # Adjust based on your needs
  selector:
    matchLabels:
      app: outline-wiki-postgresql
  template:
    metadata:
      labels:
        app: outline-wiki-postgresql
    spec:
      containers:
        - name: outline-wiki-postgresql
          image: bitnami/postgresql:16.1.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - >-
                  exec pg_isready -U "outline" -d "dbname=outline" -h 127.0.0.1
                  -p 5432
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - '-e'
                - >
                  exec pg_isready -U "outline" -d "dbname=outline" -h 127.0.0.1
                  -p 5432
                  
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f
                  /bitnami/postgresql/.initialized ]
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /bitnami/postgresql
              name: postgres-data
            - name: postgresql-extended-config
              mountPath: /bitnami/postgresql/conf/conf.d/
      volumes:
        - emptyDir:
            medium: Memory
          name: dshm
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - name: postgresql-extended-config
          configMap:
            name: pg-extended-configmap
  volumeClaimTemplates: []
