k8s/apps/outline-wiki/base/service-outline.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: outline
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
