k8s/apps/outline-wiki/base/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: outline-wiki
    app.kubernetes.io/name: outline-wiki-postgresql
  name: outline-wiki-postgresql
spec:
  ports:
    - name: tcp-postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: outline-wiki-postgresql
  type: ClusterIP
