k8s/apps/outline-wiki/base/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: outline-wiki
    app.kubernetes.io/name: redis
  name: outline-wiki-redis-master
spec:
  ports:
    - name: tcp-redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: outline-wiki-redis-master
  type: ClusterIP
status:
  loadBalancer: {}
