k8s/apps/outline-wiki/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vservice-outline
spec:
  hosts:
    - "outline.tiny.pizza"
    - "outline.dwbrite.com"
  gateways:
    - istio-system/dwbrite-com-gateway
    - istio-system/tiny-pizza-gateway
  http:
    - route:
        - destination:
            host: outline
            port:
              number: 80
